# cosmos-reason2

./: .gitattributes  .gitleaks.toml  .pre-commit-config.yaml  .python-version  ATTRIBUTIONS.md  CONTRIBUTING.md  Dockerfile  README.md  justfile  pyproject.toml  pyrefly.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  sa-issue-template.md
assets/outputs/: caption.txt  embodied_reasoning.txt  temporal_localization.txt
ci/: license-requirements.txt
configs/: cosmos_rl_config.toml  export_schemas.py  sampling_params.yaml  vision_config.yaml
configs/schemas/: cosmos_rl_config.json  sampling_params.json
cosmos_reason2/: __init__.py
cosmos_reason2_utils/: README.md  pyproject.toml
cosmos_reason2_utils/cosmos_reason2_utils/: text.py  text_test.py  train.py  vision.py
cosmos_reason2_utils/cosmos_reason2_utils/script/: inference.py  train.py
cosmos_reason_utils/: pyproject.toml
cosmos_reason_utils/src/cosmos_reason_utils/: text.py  text_test.py  vision.py  vision_test.py
cosmos_reason_utils/src/cosmos_reason_utils/script/: __init__.py  _test.py  inference.py
docker/: nightly-exclude.txt  nightly-requirements.txt  nightly.Dockerfile  quantize-dependencies.txt  quantize.Dockerfile
docs/: jetson-orin-setup.md  llmcompressor.md  troubleshooting.md
examples/benchmark/: README.md  pyproject.toml
examples/benchmark/tools/eval/: calculate_accuracy.py  evaluate.py  process_raw_data.py
examples/benchmark/tools/eval/utils/: input.py
examples/cosmos_rl/: README.md  pyproject.toml  requirements.txt
examples/cosmos_rl/configs/: sft.toml
examples/cosmos_rl/scripts/: convert_llava.py  hf_sft.py  llava_sft.py
examples/notebooks/: .python-version  README.md  pyproject.toml
examples/post_training/: README.md  pyproject.toml
examples/post_training/tools/dataset/: cosmos_grpo.py  cosmos_sft.py
examples/post_training_hf/: README.md  pyproject.toml  requirements.txt
examples/post_training_hf/configs/: sft.toml
examples/post_training_hf/scripts/: custom_sft.py  download_nexar_collision_prediction.py
examples/post_training_llava/: README.md  pyproject.toml
examples/post_training_llava/configs/: sft.toml
examples/post_training_llava/scripts/: custom_sft.py
examples/video_critic/: video_critic.py
intbot_showcase/: README.md
prompts/: README.md  embodied_reasoning.yaml
prompts/addons/: reasoning.txt
scripts/: add_timestamps.py  export_configs.py  inference.py  inference_sample.py  inference_sample_test.py  quantize.py
