# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cosmos-reason2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.12.0",
  "av>=16.0.1",
  "cosmos-reason-utils",
  "imageio-ffmpeg>=0.6.0",
  "pydantic>=2.12.4",
  "qwen-vl-utils>=0.0.14",
  "rich>=14.2.0",
  "torchcodec>=0.8.1",
  "transformers>=4.57.0",
  "tyro>=0.9.35",
  "vllm>=0.11.2",
]

[dependency-groups]
dev = [
    "pyrefly==0.42.3",
    "pytest>=9.0.1",
    "ruff==0.14.6",
]

[tool.uv.sources]
cosmos-reason-utils = { workspace = true }
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.workspace]
members = [
  "cosmos_reason_utils",
]
