# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "cosmos-reason-utils"
version = "0.2.0"
description = "Cosmos-Reason inference utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
inference = [
    "accelerate>=1.12.0",
    "av>=16.0.1",
    "cosmos-reason-utils",
    "imageio-ffmpeg>=0.6.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "rich>=14.2.0",
    "transformers>=4.57.0",
    "tyro>=0.9.35",
]
post-training = [
    "cosmos-rl>=0.3.6",
    "datasets>=4.4.1",
    "toml>=0.10.2",
    "wandb>=0.23.0",
]
cu128_torch28 = [
    "vllm==0.11.0",
    "torch==2.8.0", # version required by vLLM: https://github.com/vllm-project/vllm/releases
    "torchvision", # version pinned by torch
    "torchao==0.13.0", # version compatible with torch 2.8: https://github.com/pytorch/ao/issues/2919
    "torchcodec==0.7.0; platform_machine != 'aarch64'", # version compatible with torch 2.8: https://github.com/meta-pytorch/torchcodec/releases
    # Dependencies determined from 'uv pip install "torch==2.8.0" --torch-backend=cu128'
    # Issue: https://github.com/astral-sh/uv/issues/14237
]
cu130_torch29 = [
    "vllm==0.12.0",
    "torch==2.9.0", # version required by vLLM: https://github.com/vllm-project/vllm/releases
    "torchvision", # version pinned by torch
    "torchao==0.14.1", # version compatible with torch 2.9: https://github.com/pytorch/ao/issues/2919
    "torchcodec==0.8.1; platform_machine != 'aarch64'", # version compatible with torch 2.9: https://github.com/meta-pytorch/torchcodec/releases
    # Dependencies determined from 'uv pip install "torch==2.9.0" --torch-backend=cu130'
    # Issue: https://github.com/astral-sh/uv/issues/14237
]

[tool.uv]
conflicts = [
    [{extra = "cu128_torch28"}, {extra = "cu130_torch29"}],
]

[tool.uv.build-backend]
source-exclude = [
    "*_test.py",
]
